fix(HeaderHighlight): fix alignment for firefox and safari

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_fullHeader.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_fullHeader.scss
@@ -60,6 +60,13 @@
                 color: white;
             }
         }
+
+        &-wrapper {
+            @media #{$desktop} {
+                display: flex;
+                flex-direction: column;
+            }
+        }
     }
 
     &__title {
